--- a/visualizar.html
+++ b/visualizar.html
@@ -10,7 +10,9 @@
   <div class="container">
     <a href="index.html" class="home-btn">🏠</a>
     <h1>Inventário</h1>
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRw00-P-yZjdI9mNXUvcLjnJj6WNsoAeGWHUVR17qetfYtVGjqK8WkTNMH3Xkr5SUF2wWVt4-Ga2X0I/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-  </div>
+      <div class="iframe-container">
+        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRw00-P-yZjdI9mNXUvcLjnJj6WNsoAeGWHUVR17qetfYtVGjqK8WkTNMH3Xkr5SUF2wWVt4-Ga2X0I/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" frameborder="0"></iframe>
+      </div>
+    </div>
 </body>
 </html>
